added initial page. First sketch

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<main>
+  <article>
+    <h1>Movies Catalog</h1>
+    <p>A list of movies, genres and directors. Check it out.</p>
+
+      <ul>
+        <li>Movie Genres</li>
+        <li>Movies Directors</li>
+        <li>Movies</li>
+      </ul>
+  </article>
+</main>
