feat:implemented movie genre scaffold
generated the files for controllers, views, routes, models, etc

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <p>A list of movies, genres and directors. Check it out.</p>
 
       <ul>
-        <li>Movie Genres</li>
+        <li><%= link_to 'Movie Genres', movie_genres_path %></li>
         <li>Movies Directors</li>
         <li>Movies</li>
       </ul>
