--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 
       <ul>
         <li><%= link_to 'Movie Genres', movie_genres_path %></li>
-        <li>Movies Directors</li>
+        <li><%= link_to 'Movies Directors', movie_directors_path %></li>
         <li>Movies</li>
       </ul>
   </article>
