fix:added margins to genre and directors list

--- a/app/views/movie_directors/index.html.erb
+++ b/app/views/movie_directors/index.html.erb
@@ -4,10 +4,10 @@
 
 <%= link_to "New movie director", new_movie_director_path %>
 
-<div id="movie_directors">
+<div id="movie_directors" class="my-4">
   <% @movie_directors.each do |movie_director| %>
     <%= render movie_director %>
-    <p>
+    <p class="mb-5">
       <%= link_to "Show this movie director", movie_director %>
     </p>
 <% end %>
