--- a/app/views/movie_genres/index.html.erb
+++ b/app/views/movie_genres/index.html.erb
@@ -3,13 +3,13 @@
 <h1>Movie genres</h1>
 
 <%= link_to "New movie genre", new_movie_genre_path %>
-<div id="movie_genres">
+<div id="movie_genres" class="my-4">
   <% @movie_genres.each do |movie_genre| %>
     <p>
       <strong>Name:</strong>
       <%= movie_genre.name %>
     </p>
-    <p>
+    <p class="mb-4">
       <%= link_to "Show this movie genre", movie_genre %>
     </p>
 <% end %>
