--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -26,12 +26,12 @@
 
   <p>
     <strong>Movie director:</strong>
-    <%= movie.movie_director_id %>
+    <%= movie.movie_director.name %>
   </p>
 
   <p>
     <strong>Movie genre:</strong>
-    <%= movie.movie_genre_id %>
+    <%= movie.movie_genre.name %>
   </p>
 
 </div>
