--- a/app/views/movie_directors/_form.html.erb
+++ b/app/views/movie_directors/_form.html.erb
@@ -32,7 +32,7 @@
     <%= form.collection_select :movie_genre_id, MovieGenre.all, :id, :name, { include_blank: 'Select a movie genre' } %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="my-4">
+    <%= form.submit class: "btn btn-success" %>
   </div>
 <% end %>
