--- a/app/views/movie_genres/_form.html.erb
+++ b/app/views/movie_genres/_form.html.erb
@@ -16,7 +16,7 @@
     <%= form.text_field :name %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="my-4">
+    <%= form.submit class: "btn btn-success" %>
   </div>
 <% end %>
