--- a/app/views/movie_genres/show.html.erb
+++ b/app/views/movie_genres/show.html.erb
@@ -6,5 +6,5 @@
   <%= link_to "Edit this movie genre", edit_movie_genre_path(@movie_genre) %> |
   <%= link_to "Back to movie genres", movie_genres_path %>
 
-  <%= button_to "Destroy this movie genre", @movie_genre, method: :delete %>
+  <%= button_to "Destroy this movie genre", @movie_genre, method: :delete, data: { turbo_confirm: 'Are you sure you wanna delete it?'}, class: 'btn btn-danger' %>
 </div>
