--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div>
     <%= form.label :release_year, style: "display: block" %>
-    <%= form.date_field :release_year %>
+    <%= form.number_field :release_year %>
   </div>
 
   <div>
     <%= form.label :synopse, style: "display: block" %>
-    <%= form.text_field :synopse %>
+    <%= form.text_area :synopse %>
   </div>
 
   <div>
@@ -37,16 +37,18 @@
   </div>
 
   <div>
-    <%= form.label :movie_director_id, style: "display: block" %>
-    <%= form.text_field :movie_director_id %>
+    <!-- a select dropdown for movie directors and add an initial custom select value -->
+    <%= form.label :movie_director_id, 'Movie Director', style: "display: block" %>
+    <%= form.collection_select :movie_director_id, MovieDirector.all, :id, :name, { include_blank: 'Select a movie director' } %>
   </div>
 
   <div>
-    <%= form.label :movie_genre_id, style: "display: block" %>
-    <%= form.text_field :movie_genre_id %>
+    <!-- a select dropdown for movie genres and add an initial custom select value -->
+    <%= form.label :movie_genre_id, 'Movie Genre', style: "display: block" %>
+    <%= form.collection_select :movie_genre_id, MovieGenre.all, :id, :name, { include_blank: 'Select a movie genre' } %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="my-4">
+    <%= form.submit class: "btn btn-success" %>
   </div>
 <% end %>
