--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,20 +2,23 @@
 
 <h1>Movies</h1>
 
-<div id="movies">
+<%= link_to "New movie", new_movie_path, class: 'btn btn btn-primary' %>
+
+<div id="movies" class="my-5 d-flex flex-wrap justify-content-between m-3" style="max-width: 800px">
   <% @movies.each do |movie| %>
-    <p>
-      <strong>Title:</strong>
-      <%= movie.title %>
-    </p>
-    <p>
-      <strong>Release Year:</strong>
-      <%= movie.release_year %>
-    </p>
-    <p>
-      <%= link_to "Show this movie", movie %>
-    </p>
+    <div>
+        <p>
+          <strong>Title:</strong>
+          <%= movie.title %>
+        </p>
+        <p>
+          <strong>Release Year:</strong>
+          <%= movie.release_year %>
+        </p>
+        <p class="mb-4">
+          <%= link_to "Show this movie", movie, class: 'btn btn-info'%>
+        </p>
+    </div>
   <% end %>
 </div>
 
-<%= link_to "New movie", new_movie_path %>
